--- a/ML_Workshop.ipynb
+++ b/ML_Workshop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ML Workshop.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMypeKrtg4QJZcreaw/C5Vz",
+      "authorship_tag": "ABX9TyOkHf1aHhJ/CcKN1olLCC1o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1403,6 +1403,124 @@
         "| ``np.any``        | N/A                 | Evaluate whether any elements are true        |\n",
         "| ``np.all``        | N/A                 | Evaluate whether all elements are true        |"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "00hTqnCFqKVg"
+      },
+      "source": [
+        "### Exemplo: Qual a média dos presidentes americanos?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Kay_j_dwqMuA",
+        "outputId": "c8522bff-4998-43de-cdb8-2aba1074669c"
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/wlcosta/voxar-ml-workshop/main/president_heights.csv\n",
+        "!head -4 president_heights.csv"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2021-09-14 18:54:26--  https://raw.githubusercontent.com/wlcosta/voxar-ml-workshop/main/president_heights.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 988 [text/plain]\n",
+            "Saving to: ‘president_heights.csv.1’\n",
+            "\n",
+            "\rpresident_heights.c   0%[                    ]       0  --.-KB/s               \rpresident_heights.c 100%[===================>]     988  --.-KB/s    in 0s      \n",
+            "\n",
+            "2021-09-14 18:54:26 (32.9 MB/s) - ‘president_heights.csv.1’ saved [988/988]\n",
+            "\n",
+            "order,name,height(cm)\n",
+            "1,George Washington,189\n",
+            "2,John Adams,170\n",
+            "3,Thomas Jefferson,189\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6y_JMT3hrTxD"
+      },
+      "source": [
+        "Vamos usar o Pandas, que iremos ver com mais detalhes mais na frente. Vamos ler o arquivo csv e extrair a informação dele."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "V0hibazDrSsg",
+        "outputId": "78577684-50e5-4c94-80d7-6a48e9c47739"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "data = pd.read_csv('president_heights.csv')\n",
+        "heights = np.array(data['height(cm)'])\n",
+        "print(heights)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[189 170 189 163 183 171 185 168 173 183 173 173 175 178 183 193 178 173\n",
+            " 174 183 183 168 170 178 182 180 183 178 182 188 175 179 183 193 182 183\n",
+            " 177 185 188 188 182 185]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vsopKC38raEQ"
+      },
+      "source": [
+        "Com esses dados na mão, podemos computar algumas estatísticas:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7jjiUQlWrctQ"
+      },
+      "source": [
+        "print(\"Altura média:       \", heights.mean())\n",
+        "print(\"Desvio padrão:\", heights.std())\n",
+        "print(\"Mínimo:    \", heights.min())\n",
+        "print(\"Máximo:    \", heights.max())"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jQC2Ff-NrdNB"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
